pre scrollbar fix.

--- a/style.scss
+++ b/style.scss
@@ -110,6 +110,11 @@ img {
   max-width: 100%;
 }
 
+pre {
+  overflow-x: auto;
+  overflow-y: auto;
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
